# graphics-homework

./: .gitignore  .gitmodules  CMakeLists.txt
cmake/: thirdparty.cmake
common/render_utils/shaders/: cpp_glsl_compat.h  unpack_attributes_baked.glsl
common/scene/: Camera.hpp  SceneManager.cpp  SceneManager.hpp
resources/scenes/Avocado/: Avocado_baked.gltf
resources/scenes/Boombox/: BoomBox.gltf
resources/scenes/lovely_town/: scene.gltf
resources/scenes_baked/Boombox/: BoomBox_baked.gltf
resources/scenes_baked/LovelyTown/: scene_baked.gltf
resources/scenes_baked/LowPolyTown/: scene_baked.gltf
tasks/: CMakeLists.txt
tasks/inflight_frames/: App.cpp  App.hpp  CMakeLists.txt
tasks/inflight_frames/shaders/: toy.frag
tasks/local_shadertoy1/: App.cpp  App.hpp  CMakeLists.txt
tasks/local_shadertoy1/shaders/: UniformParams.h  toy.comp
tasks/local_shadertoy2/: Alignstd430.hpp  App.cpp  App.hpp  CMakeLists.txt  tuple_tools.hpp
tasks/local_shadertoy2/shaders/: UniformParams.h  markdown.glsl  proc_texture.frag  sdf.glsl  toy.frag  utils.glsl
tasks/many_objects/renderer/: App.cpp  Renderer.cpp  Renderer.hpp  WorldRenderer.cpp  WorldRenderer.hpp
tasks/many_objects/renderer/shaders/: static_mesh.frag  static_mesh.vert
tasks/model_bakery/baker/: CMakeLists.txt  baker.cpp  baker.hpp  main.cpp
tasks/model_bakery/renderer/: Renderer.cpp  WorldRenderer.cpp
tasks/model_bakery/renderer/shaders/: static_mesh.vert
tasks/renderer/: App.cpp  App.hpp  CMakeLists.txt  GrassRenderer.cpp  GrassRenderer.hpp  Renderer.cpp  Renderer.hpp  StaticMeshRenderer.cpp  StaticMeshRenderer.hpp  TerrainGenerator.cpp  TerrainGenerator.hpp  WorldRenderer.cpp  WorldRenderer.hpp
tasks/renderer/scene/: RenderingPrimitives.hpp
tasks/renderer/scene/baker/: CMakeLists.txt  baker.cpp  baker.hpp  main.cpp
tasks/renderer/scene/scene_manager/: CMakeLists.txt  SceneLoader.cpp  SceneLoader.hpp
tasks/renderer/shaders/: cube.frag  cube.vert  fxaa.frag  fxaa.vert  fxaa_defines.glsl  resolve.comp  resolve.glsl  resolve.h  static_mesh.frag  static_mesh.vert  utils.glsl
tasks/renderer/shaders/grass/: grass.frag  grass.glsl  grass.h  grass.vert  grassGen.comp
tasks/renderer/shaders/static/: cull_group.comp  cull_single.comp  render.frag  render_group.vert  render_single.vert  reset_group_comms.comp  static.h
tasks/renderer/shaders/terrain/: lightgen.comp  normal.comp  perlin.comp  terrain.frag  terrain.glsl  terrain.h  terrain.tesc  terrain.tese  terrain.vert
tasks/renderer/shaders/tonemap/: cumsum.comp  downscale.comp  equalize.comp  hist.comp  minmax.comp  tonemap.comp  tonemap.h
tasks/renderer/state_tracking/: ResourceStates.cpp  ResourceStates.hpp
tasks/terrain/renderer/: CMakeLists.txt  Renderer.cpp  WorldRenderer.cpp  WorldRenderer.hpp
tasks/terrain/renderer/shaders/: normal.comp  perlin.comp  quad.vert  static_mesh.frag  terrain.frag  terrain.tesc  terrain.tese
tasks/tonemapping/renderer/: CMakeLists.txt  Renderer.cpp  WorldRenderer.cpp  WorldRenderer.hpp
tasks/tonemapping/renderer/shaders/: cumsum.comp  hist.comp  perlin.comp  quad.vert  terrain.frag  tonemap.comp  tonemap.h
tasks/tonemapping/renderer/shaders/tonemap/: cumsum.comp  equalize.comp  minmax.comp  tonemap.comp  tonemap.glsl
